--- a/estoqueCamisasDotNet.csproj
+++ b/estoqueCamisasDotNet.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Menus\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
+  </ItemGroup>
+
 </Project>
