Criação de um projeto ASP.NET Core vazio; Criação do projeto de biblioteca de classes que terá os modelos; Criação do projeto de biblioteca de classes que encapsulará o acesso aos dados.

--- a/estoqueCamisasDotNet.csproj
+++ b/estoqueCamisasDotNet.csproj
@@ -25,4 +25,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EstoquePontoDoClubista.Shared.Modelos\EstoquePontoDoClubista.Shared.Modelos.csproj" />
+    <ProjectReference Include="..\PontoDoClubista.Shared.Dados\PontoDoClubista.Shared.Dados.csproj" />
+  </ItemGroup>
+
 </Project>
